# sysledge

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  SKILL.md  log.md  pyproject.toml  sysledge.toml
.github/workflows/: diagrams.yml  validate.yml
.nomograph/: config.toml
.nomograph/scripts/: analyze.sh  diagrams.sh  impact.sh  validate-model.sh
docs/: conventions.md  diagrams.md  domain-2-plan.md
lib/: concepts.sysml  scalar_values.sysml
models/: index.sysml
models/nanos3reader/: allocation.sysml  behavior.sysml  requirements.sysml  structure.sysml  verification.sysml
raw/nanos3reader/: manifest.yaml
reports/: completeness-report.md  requirements-table.md  traceability-matrix.html  traceability-matrix.md
reports/diagrams/: bdd.mmd  diagrams.md  ibd.mmd  manifest.json  structure-variants.mmd  traceability.mmd
scripts/: install.sh
tools/sysmldiag/: README.md  __init__.py  __main__.py  emit.py  graph.py  lint.py  llm.py  puppeteer.json  render_svg.py
tools/sysmldiag/ingest/: __init__.py  agents.py  authority.py  build_models.py  queue.py
tools/sysmldiag/ingest_eval/: __init__.py  doc_reader.py  eval.py  extractor.py
tools/sysmldiag/ingest_eval/medhead/: source.md
tools/sysmldiag/ingest_eval/medhead/expected/: README.md  medhead.sysml
tools/sysmldiag/ingest_eval/medhead/expected/diagrams/: allocation.mmd  bdd.mmd  behavior.mmd  diagrams.md  ibd.mmd  manifest.json  package_map.mmd  requirements.mmd
tools/sysmldiag/tests/: test_doc_reader.py  test_ingest_agents.py  test_ingest_authority.py  test_ingest_build.py  test_ingest_queue.py  test_llm.py  test_sysmldiag.py
tools/sysmldiag/tests/fixtures/: nanos3reader.index.json  synthetic.index.json
tools/sysmldiag/tests/fixtures/golden/: allocation.mmd  behavior.mmd  package_map.mmd  requirements.mmd
tools/sysmldiag/views/: __init__.py  allocation.py  bdd.py  behavior.py  ibd.py  package_map.py  requirements.py
