[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmldiag"
version = "0.1.0"
description = "Deterministic SysML v2 -> Mermaid diagram generator for the sysledge knowledge base"
readme = "tools/sysmldiag/README.md"
requires-python = ">=3.10"
# Diagram generation + the LLM client are stdlib-only. The ingestion pipeline
# (sysmldiag.ingest) uses pydantic to validate machine-generated patches at parse
# time — the one place strong schema validation of LLM output earns its keep.
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
# pip install 'sysmldiag[pdf]'    — PDF ingestion via pypdf
pdf  = ["pypdf>=4"]
# pip install 'sysmldiag[docx]'   — Word (.docx) ingestion via python-docx
docx = ["python-docx>=1"]
# pip install 'sysmldiag[ingest]' — both at once
ingest = ["sysmldiag[pdf,docx]"]

[project.scripts]
sysmldiag = "sysmldiag.__main__:main"
sysmldiag-llm = "sysmldiag.llm:_main"
sysledge-apply = "sysmldiag.ingest.authority:main"
sysledge-build = "sysmldiag.ingest.build_models:main"

[tool.setuptools]
package-dir = { "" = "tools" }

[tool.setuptools.packages.find]
where = ["tools"]
include = ["sysmldiag*"]
